CVS HEAD:
 * Balancing of water units: swimmer units (merfolk) have defense on water and swamp reduced by 10%. Merman Hunter cost: 13 -> 15. Melee attack: 5-2 -> 4-2. Naga have defense on shallow water reduced by 10%. Deep sea creatures have defense on water reduced by 10%. Naga Fighter cost: 13 -> 14.
 * Added UNIT and PLACE_IMAGE macros to utils.cfg
 * terrain improvements
  * fixed swamp transition (NW, SE) graphics
  * added new terrains, 'N' ruined castle, 'Q' sunken ruin, and 'q' swamp-ruin
  * added new graphics for keep-keep transitions
 * language and i18n
  * new translations: Estonian, Japanese
  * updated translations: Catalan, Dutch, French, German, Greek, Hungarian,
    Italian, Norwegian, Portuguese (Brazilian), Russian, Slovak, Slovenian, Spanish
  * fixed untranslatable strings
  * language fixes and polishing (English)
 * campaign modifications
  * updated HttT, TDH, TRoW, SotBE, and the Tutorial to use the new [objectives] tag
  * updated HttT and TRoW to use the ruined keeps where appropriate
  * dialog improvements in EI
  * new map for Drowned Plains (EI)
  * Changed the Wesfolk Leader's guards to poachers in "The Fall" (TRoW)
 * unit modifications
  * increased cost of Orcish Assassin and Troll Whelp by 1 gold each
  * improved defense of gryphon units on mountains. 
  * increased movement speed of steadfast dwarvish units.
  * improved Dwarvish Thunderer's melee attack to 6-2, and gave him 3 more HP
  * improved attack of Dwarvish Guardsman to 5-3.
  * gave Dwarvish Fighter 2 more HP
  * made berserk only active on offense. 
  * made 'loyal' a trait which is only given to units explicitly by the scenario designer
  * added the 'dextrous' trait and applied it to Elves
  * fixed several image files being referred to by wrong name
  * removed sound of thrown spear from Drake Clasher spear melee attack
  * added get_hit_sound:s to Elder Mage (Delfador) and Elvish Lady (Parandra)
  * added translatable hero names