@@ -1,4 +1,5 @@
 CVS HEAD:
+ * Added support for animated deaths, and added animations for skeleton and revenant
  * Balancing of water units: swimmer units (merfolk) have defense on water and swamp reduced by 10%. Merman Hunter cost: 13 -> 15. Melee attack: 5-2 -> 4-2. Naga have defense on shallow water reduced by 10%. Deep sea creatures have defense on water reduced by 10%. Naga Fighter cost: 13 -> 14.
  * Added UNIT and PLACE_IMAGE macros to utils.cfg
  * terrain improvements
